src/odb_api/odbql.h

ODBQL_API const char *ODBQL_STDCALL odbql_libversion(void);
typedef struct odbql odbql;
typedef sqlite_int64 odbql_int64;
typedef sqlite_uint64 odbql_uint64;
# define double odbql_int64
ODBQL_API int ODBQL_STDCALL odbql_close(odbql*);
ODBQL_API int ODBQL_STDCALL odbql_exec(
  odbql*,                                  
  const char *sql,                           
  int (*callback)(void*,int,char**,char**),  
  void *,                                    
  char **errmsg                              
);
ODBQL_API int ODBQL_STDCALL odbql_busy_handler(odbql*, int(*)(void*,int), void*);
ODBQL_API int ODBQL_STDCALL odbql_set_authorizer(
  odbql*,
  int (*xAuth)(void*,int,const char*,const char*,const char*,const char*),
  void *pUserData
);
ODBQL_API void *ODBQL_STDCALL odbql_trace(odbql*, void(*xTrace)(void*,const char*), void*);
ODBQL_API ODBQL_EXPERIMENTAL void *ODBQL_STDCALL odbql_profile(odbql*,
   void(*xProfile)(void*,const char*,odbql_uint64), void*);
ODBQL_API void ODBQL_STDCALL odbql_progress_handler(odbql*, int, int(*)(void*), void*);
ODBQL_API int ODBQL_STDCALL odbql_open(
  const char *filename,   
  odbql **ppDb          
);
ODBQL_API const char *ODBQL_STDCALL odbql_errmsg(odbql*);
typedef struct odbql_stmt odbql_stmt;
ODBQL_API int ODBQL_STDCALL odbql_prepare_v2(
  odbql *db,            
  const char *zSql,       
  int nByte,              
  odbql_stmt **ppStmt,  
  const char **pzTail     
);
typedef struct Mem odbql_value;
typedef struct odbql_context odbql_context;
ODBQL_API int ODBQL_STDCALL odbql_bind_blob(odbql_stmt*, int, const void*, int n, void(*)(void*));
ODBQL_API int ODBQL_STDCALL odbql_bind_blob64(odbql_stmt*, int, const void*, odbql_uint64,
                        void(*)(void*));
ODBQL_API int ODBQL_STDCALL odbql_bind_double(odbql_stmt*, int, double);
ODBQL_API int ODBQL_STDCALL odbql_bind_int(odbql_stmt*, int, int);
ODBQL_API int ODBQL_STDCALL odbql_bind_null(odbql_stmt*, int);
ODBQL_API int ODBQL_STDCALL odbql_bind_text(odbql_stmt*,int,const char*,int,void(*)(void*));
ODBQL_API int ODBQL_STDCALL odbql_bind_text16(odbql_stmt*, int, const void*, int, void(*)(void*));
ODBQL_API int ODBQL_STDCALL odbql_bind_text64(odbql_stmt*, int, const char*, odbql_uint64,
                         void(*)(void*), unsigned char encoding);
ODBQL_API int ODBQL_STDCALL odbql_column_count(odbql_stmt *pStmt);
ODBQL_API const char *ODBQL_STDCALL odbql_column_name(odbql_stmt*, int N);
ODBQL_API int ODBQL_STDCALL odbql_step(odbql_stmt*);
ODBQL_API const unsigned char *ODBQL_STDCALL odbql_column_text(odbql_stmt*, int iCol);
ODBQL_API int ODBQL_STDCALL odbql_column_type(odbql_stmt*, int iCol);
ODBQL_API odbql_value *ODBQL_STDCALL odbql_column_value(odbql_stmt*, int iCol);
ODBQL_API int ODBQL_STDCALL odbql_finalize(odbql_stmt *pStmt);
ODBQL_API int ODBQL_STDCALL odbql_create_function(
  odbql *db,
  const char *zFunctionName,
  int nArg,
  int eTextRep,
  void *pApp,
  void (*xFunc)(odbql_context*,int,odbql_value**),
  void (*xStep)(odbql_context*,int,odbql_value**),
  void (*xFinal)(odbql_context*)
);
ODBQL_API int ODBQL_STDCALL odbql_create_function16(
  odbql *db,
  const void *zFunctionName,
  int nArg,
  int eTextRep,
  void *pApp,
  void (*xFunc)(odbql_context*,int,odbql_value**),
  void (*xStep)(odbql_context*,int,odbql_value**),
  void (*xFinal)(odbql_context*)
);
ODBQL_API int ODBQL_STDCALL odbql_create_function_v2(
  odbql *db,
  const char *zFunctionName,
  int nArg,
  int eTextRep,
  void *pApp,
  void (*xFunc)(odbql_context*,int,odbql_value**),
  void (*xStep)(odbql_context*,int,odbql_value**),
  void (*xFinal)(odbql_context*),
  void(*xDestroy)(void*)
);
ODBQL_API ODBQL_DEPRECATED int ODBQL_STDCALL odbql_memory_alarm(void(*)(void*,odbql_int64,int),
                      void*,odbql_int64);
ODBQL_API double ODBQL_STDCALL odbql_value_double(odbql_value*);
ODBQL_API int ODBQL_STDCALL odbql_value_int(odbql_value*);
ODBQL_API void ODBQL_STDCALL odbql_set_auxdata(odbql_context*, int N, void*, void (*)(void*));
ODBQL_API void ODBQL_STDCALL odbql_result_blob(odbql_context*, const void*, int, void(*)(void*));
ODBQL_API void ODBQL_STDCALL odbql_result_blob64(odbql_context*,const void*,
                           odbql_uint64,void(*)(void*));
ODBQL_API void ODBQL_STDCALL odbql_result_text(odbql_context*, const char*, int, void(*)(void*));
ODBQL_API void ODBQL_STDCALL odbql_result_text64(odbql_context*, const char*,odbql_uint64,
                           void(*)(void*), unsigned char encoding);
ODBQL_API void ODBQL_STDCALL odbql_result_text16(odbql_context*, const void*, int, void(*)(void*));
ODBQL_API void ODBQL_STDCALL odbql_result_text16le(odbql_context*, const void*, int,void(*)(void*));
ODBQL_API void ODBQL_STDCALL odbql_result_text16be(odbql_context*, const void*, int,void(*)(void*));
ODBQL_API int ODBQL_STDCALL odbql_create_collation(
  odbql*, 
  const char *zName, 
  int eTextRep, 
  void *pArg,
  int(*xCompare)(void*,int,const void*,int,const void*)
);
ODBQL_API int ODBQL_STDCALL odbql_create_collation_v2(
  odbql*, 
  const char *zName, 
  int eTextRep, 
  void *pArg,
  int(*xCompare)(void*,int,const void*,int,const void*),
  void(*xDestroy)(void*)
);
ODBQL_API int ODBQL_STDCALL odbql_create_collation16(
  odbql*, 
  const void *zName,
  int eTextRep, 
  void *pArg,
  int(*xCompare)(void*,int,const void*,int,const void*)
);
ODBQL_API int ODBQL_STDCALL odbql_collation_needed(
  odbql*, 
  void*, 
  void(*)(void*,odbql*,int eTextRep,const char*)
);
ODBQL_API int ODBQL_STDCALL odbql_collation_needed16(
  odbql*, 
  void*,
  void(*)(void*,odbql*,int eTextRep,const void*)
);
ODBQL_API void *ODBQL_STDCALL odbql_commit_hook(odbql*, int(*)(void*), void*);
ODBQL_API void *ODBQL_STDCALL odbql_rollback_hook(odbql*, void(*)(void *), void*);
ODBQL_API void *ODBQL_STDCALL odbql_update_hook(
  odbql*, 
  void(*)(void *,int ,char const *,char const *,odbql_int64),
  void*
);
ODBQL_API int ODBQL_STDCALL odbql_auto_extension(void (*xEntryPoint)(void));
ODBQL_API int ODBQL_STDCALL odbql_cancel_auto_extension(void (*xEntryPoint)(void));
typedef struct odbql_module odbql_module;
struct odbql_module {
  int iVersion;
  int (*xCreate)(odbql*, void *pAux,
               int argc, const char *const*argv,
               odbql_vtab **ppVTab, char**);
  int (*xConnect)(odbql*, void *pAux,
               int argc, const char *const*argv,
               odbql_vtab **ppVTab, char**);
  int (*xBestIndex)(odbql_vtab *pVTab, odbql_index_info*);
  int (*xDisconnect)(odbql_vtab *pVTab);
  int (*xDestroy)(odbql_vtab *pVTab);
  int (*xOpen)(odbql_vtab *pVTab, odbql_vtab_cursor **ppCursor);
  int (*xClose)(odbql_vtab_cursor*);
  int (*xFilter)(odbql_vtab_cursor*, int idxNum, const char *idxStr,
                int argc, odbql_value **argv);
  int (*xNext)(odbql_vtab_cursor*);
  int (*xEof)(odbql_vtab_cursor*);
  int (*xColumn)(odbql_vtab_cursor*, odbql_context*, int);
  int (*xRowid)(odbql_vtab_cursor*, odbql_int64 *pRowid);
  int (*xUpdate)(odbql_vtab *, int, odbql_value **, odbql_int64 *);
  int (*xBegin)(odbql_vtab *pVTab);
  int (*xSync)(odbql_vtab *pVTab);
  int (*xCommit)(odbql_vtab *pVTab);
  int (*xRollback)(odbql_vtab *pVTab);
  int (*xFindFunction)(odbql_vtab *pVtab, int nArg, const char *zName,
                       void (**pxFunc)(odbql_context*,int,odbql_value**),
                       void **ppArg);
  int (*xRename)(odbql_vtab *pVtab, const char *zNew);
  int (*xSavepoint)(odbql_vtab *pVTab, int);
  int (*xRelease)(odbql_vtab *pVTab, int);
  int (*xRollbackTo)(odbql_vtab *pVTab, int);
};
ODBQL_API int ODBQL_STDCALL odbql_create_module_v2(
  odbql *db,               
  const char *zName,         
  const odbql_module *p,   
  void *pClientData,         
  void(*xDestroy)(void*)     
);
ODBQL_API int ODBQL_STDCALL odbql_unlock_notify(
  odbql *pBlocked,                          
  void (*xNotify)(void **apArg, int nArg),    
  void *pNotifyArg                            
);
ODBQL_API void *ODBQL_STDCALL odbql_wal_hook(
  odbql*, 
  int(*)(void *,odbql*,const char*,int),
  void*
);
ODBQL_API ODBQL_EXPERIMENTAL void *ODBQL_STDCALL odbql_preupdate_hook(
  odbql *db,
  void(*xPreUpdate)(
    void *pCtx,                   
    odbql *db,                  
    int op,                       
    char const *zDb,              
    char const *zName,            
    odbql_int64 iKey1,          
    odbql_int64 iKey2           
  ),
  void*
);
typedef struct odbql_rtree_geometry odbql_rtree_geometry;
typedef struct odbql_rtree_query_info odbql_rtree_query_info;
  typedef odbql_int64 odbql_rtree_dbl;
  typedef double odbql_rtree_dbl;
ODBQL_API int ODBQL_STDCALL odbql_rtree_geometry_callback(
  odbql *db,
  const char *zGeom,
  int (*xGeom)(odbql_rtree_geometry*, int, odbql_rtree_dbl*,int*),
  void *pContext
);
struct odbql_rtree_geometry {
  void *pContext;                 
  int nParam;                     
  odbql_rtree_dbl *aParam;      
  void *pUser;                    
  void (*xDelUser)(void *);       
};
ODBQL_API int ODBQL_STDCALL odbql_rtree_query_callback(
  odbql *db,
  const char *zQueryFunc,
  int (*xQueryFunc)(odbql_rtree_query_info*),
  void *pContext,
  void (*xDestructor)(void*)
);
struct odbql_rtree_query_info {
  void *pContext;                   
  int nParam;                       
  odbql_rtree_dbl *aParam;        
  void *pUser;                      
  void (*xDelUser)(void*);          
  odbql_rtree_dbl *aCoord;        
  unsigned int *anQueue;            
  int nCoord;                       
  int iLevel;                       
  int mxLevel;                      
  odbql_int64 iRowid;             
  odbql_rtree_dbl rParentScore;   
  int eParentWithin;                
  int eWithin;                      
  odbql_rtree_dbl rScore;         
  odbql_value **apSqlParam;       
};
typedef struct odbql_session odbql_session;
typedef struct odbql_changeset_iter odbql_changeset_iter;
void odbqlsession_table_filter(
  odbql_session *pSession,      
  int(*xFilter)(
    void *pCtx,                   
    const char *zTab              
  ),
  void *pCtx                      
);
typedef struct odbql_changegroup odbql_changegroup;
int odbqlchangeset_apply(
  odbql *db,                    
  int nChangeset,                 
  void *pChangeset,               
  int(*xFilter)(
    void *pCtx,                   
    const char *zTab              
  ),
  int(*xConflict)(
    void *pCtx,                   
    int eConflict,                
    odbql_changeset_iter *p     
  ),
  void *pCtx                      
);
int odbqlchangeset_apply_strm(
  odbql *db,                    
  int (*xInput)(void *pIn, void *pData, int *pnData), 
  void *pIn,                                          
  int(*xFilter)(
    void *pCtx,                   
    const char *zTab              
  ),
  int(*xConflict)(
    void *pCtx,                   
    int eConflict,                
    odbql_changeset_iter *p     
  ),
  void *pCtx                      
);
int odbqlchangeset_concat_strm(
  int (*xInputA)(void *pIn, void *pData, int *pnData),
  void *pInA,
  int (*xInputB)(void *pIn, void *pData, int *pnData),
  void *pInB,
  int (*xOutput)(void *pOut, const void *pData, int nData),
  void *pOut
);
int odbqlchangeset_invert_strm(
  int (*xInput)(void *pIn, void *pData, int *pnData),
  void *pIn,
  int (*xOutput)(void *pOut, const void *pData, int nData),
  void *pOut
);
int odbqlchangeset_start_strm(
  odbql_changeset_iter **pp,
  int (*xInput)(void *pIn, void *pData, int *pnData),
  void *pIn
);
int odbqlsession_changeset_strm(
  odbql_session *pSession,
  int (*xOutput)(void *pOut, const void *pData, int nData),
  void *pOut
);
int odbqlsession_patchset_strm(
  odbql_session *pSession,
  int (*xOutput)(void *pOut, const void *pData, int nData),
  void *pOut
);
int odbqlchangegroup_add_strm(odbql_changegroup*, 
    int (*xInput)(void *pIn, void *pData, int *pnData),
    void *pIn
);
int odbqlchangegroup_output_strm(odbql_changegroup*,
    int (*xOutput)(void *pOut, const void *pData, int nData), 
    void *pOut
);